--- a/dapp-v1/public/theme/nftyfinance-theme.css
+++ b/dapp-v1/public/theme/nftyfinance-theme.css
@@ -6,116 +6,116 @@
 
 :root,
 [data-bs-theme=light] {
-	/* SocialPass turquoise */
+	/* SocialPass purple */
 
-	--sp-turquoise-hue: 198;
-	--sp-turquoise-saturation: 45%;
-	--sp-turquoise-100-hsl: var(--sp-turquoise-hue), var(--sp-turquoise-saturation), 90%;
-	--sp-turquoise-200-hsl: var(--sp-turquoise-hue), var(--sp-turquoise-saturation), 80%;
-	--sp-turquoise-300-hsl: var(--sp-turquoise-hue), var(--sp-turquoise-saturation), 70%;
-	--sp-turquoise-400-hsl: var(--sp-turquoise-hue), var(--sp-turquoise-saturation), 60%;
-	--sp-turquoise-500-hsl: var(--sp-turquoise-hue), var(--sp-turquoise-saturation), 50%;
-	--sp-turquoise-600-hsl: var(--sp-turquoise-hue), var(--sp-turquoise-saturation), 40%;
-	--sp-turquoise-700-hsl: var(--sp-turquoise-hue), var(--sp-turquoise-saturation), 30%;
-	--sp-turquoise-800-hsl: var(--sp-turquoise-hue), var(--sp-turquoise-saturation), 20%;
-	--sp-turquoise-900-hsl: var(--sp-turquoise-hue), var(--sp-turquoise-saturation), 10%;
-	--sp-turquoise-100: hsl(var(--sp-turquoise-100-hsl));
-	--sp-turquoise-200: hsl(var(--sp-turquoise-200-hsl));
-	--sp-turquoise-300: hsl(var(--sp-turquoise-300-hsl));
-	--sp-turquoise-400: hsl(var(--sp-turquoise-400-hsl));
-	--sp-turquoise-500: hsl(var(--sp-turquoise-500-hsl));
-	--sp-turquoise-600: hsl(var(--sp-turquoise-600-hsl));
-	--sp-turquoise-700: hsl(var(--sp-turquoise-700-hsl));
-	--sp-turquoise-800: hsl(var(--sp-turquoise-800-hsl));
-	--sp-turquoise-900: hsl(var(--sp-turquoise-900-hsl));
-	--sp-turquoise-hsl: var(--sp-turquoise-500-hsl);
-	--sp-turquoise: hsl(var(--sp-turquoise-hsl));
-	--sp-turquoise-foreground-hsl: var(--bs-white-hsl);
-	--sp-turquoise-foreground: hsl(var(--sp-turquoise-foreground-hsl));
-	--sp-turquoise-text-emphasis-hsl: var(--sp-turquoise-600-hsl);
-	--sp-turquoise-text-emphasis: hsl(var(--sp-turquoise-text-emphasis-hsl));
-	--sp-turquoise-hover-bg: var(--sp-turquoise-600);
-	--sp-turquoise-active-bg: var(--sp-turquoise-700);
-	--sp-turquoise-bg-subtle: hsl(var(--sp-turquoise-hue), var(--sp-turquoise-saturation), 95%);
-	--sp-turquoise-border-subtle: var(--sp-turquoise-400);
-	--sp-turquoise-checkbox-svg: var(--bs-checkbox-svg-light);
-	--sp-turquoise-dash-svg: var(--bs-dash-svg-light);
-	--sp-turquoise-radio-svg: var(--bs-radio-svg-light);
-	--sp-turquoise-switch-svg: var(--bs-switch-svg-light);
+	--nf-purple-hue: 262;
+	--nf-purple-saturation: 59%;
+	--nf-purple-100-hsl: var(--nf-purple-hue), var(--nf-purple-saturation), 90%;
+	--nf-purple-200-hsl: var(--nf-purple-hue), var(--nf-purple-saturation), 80%;
+	--nf-purple-300-hsl: var(--nf-purple-hue), var(--nf-purple-saturation), 70%;
+	--nf-purple-400-hsl: var(--nf-purple-hue), var(--nf-purple-saturation), 60%;
+	--nf-purple-500-hsl: var(--nf-purple-hue), var(--nf-purple-saturation), 50%;
+	--nf-purple-600-hsl: var(--nf-purple-hue), var(--nf-purple-saturation), 40%;
+	--nf-purple-700-hsl: var(--nf-purple-hue), var(--nf-purple-saturation), 30%;
+	--nf-purple-800-hsl: var(--nf-purple-hue), var(--nf-purple-saturation), 20%;
+	--nf-purple-900-hsl: var(--nf-purple-hue), var(--nf-purple-saturation), 10%;
+	--nf-purple-100: hsl(var(--nf-purple-100-hsl));
+	--nf-purple-200: hsl(var(--nf-purple-200-hsl));
+	--nf-purple-300: hsl(var(--nf-purple-300-hsl));
+	--nf-purple-400: hsl(var(--nf-purple-400-hsl));
+	--nf-purple-500: hsl(var(--nf-purple-500-hsl));
+	--nf-purple-600: hsl(var(--nf-purple-600-hsl));
+	--nf-purple-700: hsl(var(--nf-purple-700-hsl));
+	--nf-purple-800: hsl(var(--nf-purple-800-hsl));
+	--nf-purple-900: hsl(var(--nf-purple-900-hsl));
+	--nf-purple-hsl: var(--nf-purple-500-hsl);
+	--nf-purple: hsl(var(--nf-purple-hsl));
+	--nf-purple-foreground-hsl: var(--bs-white-hsl);
+	--nf-purple-foreground: hsl(var(--nf-purple-foreground-hsl));
+	--nf-purple-text-emphasis-hsl: var(--nf-purple-600-hsl);
+	--nf-purple-text-emphasis: hsl(var(--nf-purple-text-emphasis-hsl));
+	--nf-purple-hover-bg: var(--nf-purple-600);
+	--nf-purple-active-bg: var(--nf-purple-700);
+	--nf-purple-bg-subtle: hsl(var(--nf-purple-hue), var(--nf-purple-saturation), 95%);
+	--nf-purple-border-subtle: var(--nf-purple-400);
+	--nf-purple-checkbox-svg: var(--bs-checkbox-svg-light);
+	--nf-purple-dash-svg: var(--bs-dash-svg-light);
+	--nf-purple-radio-svg: var(--bs-radio-svg-light);
+	--nf-purple-switch-svg: var(--bs-switch-svg-light);
 
 	/* SocialPass orange */
 
-	--sp-orange-hue: 25;
-	--sp-orange-saturation: 87%;
-	--sp-orange-100-hsl: var(--sp-orange-hue), var(--sp-orange-saturation), 90%;
-	--sp-orange-200-hsl: var(--sp-orange-hue), var(--sp-orange-saturation), 80%;
-	--sp-orange-300-hsl: var(--sp-orange-hue), var(--sp-orange-saturation), 70%;
-	--sp-orange-400-hsl: var(--sp-orange-hue), var(--sp-orange-saturation), 60%;
-	--sp-orange-500-hsl: var(--sp-orange-hue), var(--sp-orange-saturation), 50%;
-	--sp-orange-600-hsl: var(--sp-orange-hue), var(--sp-orange-saturation), 40%;
-	--sp-orange-700-hsl: var(--sp-orange-hue), var(--sp-orange-saturation), 30%;
-	--sp-orange-800-hsl: var(--sp-orange-hue), var(--sp-orange-saturation), 20%;
-	--sp-orange-900-hsl: var(--sp-orange-hue), var(--sp-orange-saturation), 10%;
-	--sp-orange-100: hsl(var(--sp-orange-100-hsl));
-	--sp-orange-200: hsl(var(--sp-orange-200-hsl));
-	--sp-orange-300: hsl(var(--sp-orange-300-hsl));
-	--sp-orange-400: hsl(var(--sp-orange-400-hsl));
-	--sp-orange-500: hsl(var(--sp-orange-500-hsl));
-	--sp-orange-600: hsl(var(--sp-orange-600-hsl));
-	--sp-orange-700: hsl(var(--sp-orange-700-hsl));
-	--sp-orange-800: hsl(var(--sp-orange-800-hsl));
-	--sp-orange-900: hsl(var(--sp-orange-900-hsl));
-	--sp-orange-hsl: var(--sp-orange-500-hsl);
-	--sp-orange: hsl(var(--sp-orange-hsl));
-	--sp-orange-foreground-hsl: var(--bs-white-hsl);
-	--sp-orange-foreground: hsl(var(--sp-orange-foreground-hsl));
-	--sp-orange-text-emphasis-hsl: var(--sp-orange-600-hsl);
-	--sp-orange-text-emphasis: hsl(var(--sp-orange-text-emphasis-hsl));
-	--sp-orange-hover-bg: var(--sp-orange-600);
-	--sp-orange-active-bg: var(--sp-orange-700);
-	--sp-orange-bg-subtle: hsl(var(--sp-orange-hue), var(--sp-orange-saturation), 95%);
-	--sp-orange-border-subtle: var(--sp-orange-400);
-	--sp-orange-checkbox-svg: var(--bs-checkbox-svg-light);
-	--sp-orange-dash-svg: var(--bs-dash-svg-light);
-	--sp-orange-radio-svg: var(--bs-radio-svg-light);
-	--sp-orange-switch-svg: var(--bs-switch-svg-light);
+	--nf-orange-hue: 25;
+	--nf-orange-saturation: 87%;
+	--nf-orange-100-hsl: var(--nf-orange-hue), var(--nf-orange-saturation), 90%;
+	--nf-orange-200-hsl: var(--nf-orange-hue), var(--nf-orange-saturation), 80%;
+	--nf-orange-300-hsl: var(--nf-orange-hue), var(--nf-orange-saturation), 70%;
+	--nf-orange-400-hsl: var(--nf-orange-hue), var(--nf-orange-saturation), 60%;
+	--nf-orange-500-hsl: var(--nf-orange-hue), var(--nf-orange-saturation), 50%;
+	--nf-orange-600-hsl: var(--nf-orange-hue), var(--nf-orange-saturation), 40%;
+	--nf-orange-700-hsl: var(--nf-orange-hue), var(--nf-orange-saturation), 30%;
+	--nf-orange-800-hsl: var(--nf-orange-hue), var(--nf-orange-saturation), 20%;
+	--nf-orange-900-hsl: var(--nf-orange-hue), var(--nf-orange-saturation), 10%;
+	--nf-orange-100: hsl(var(--nf-orange-100-hsl));
+	--nf-orange-200: hsl(var(--nf-orange-200-hsl));
+	--nf-orange-300: hsl(var(--nf-orange-300-hsl));
+	--nf-orange-400: hsl(var(--nf-orange-400-hsl));
+	--nf-orange-500: hsl(var(--nf-orange-500-hsl));
+	--nf-orange-600: hsl(var(--nf-orange-600-hsl));
+	--nf-orange-700: hsl(var(--nf-orange-700-hsl));
+	--nf-orange-800: hsl(var(--nf-orange-800-hsl));
+	--nf-orange-900: hsl(var(--nf-orange-900-hsl));
+	--nf-orange-hsl: var(--nf-orange-500-hsl);
+	--nf-orange: hsl(var(--nf-orange-hsl));
+	--nf-orange-foreground-hsl: var(--bs-white-hsl);
+	--nf-orange-foreground: hsl(var(--nf-orange-foreground-hsl));
+	--nf-orange-text-emphasis-hsl: var(--nf-orange-600-hsl);
+	--nf-orange-text-emphasis: hsl(var(--nf-orange-text-emphasis-hsl));
+	--nf-orange-hover-bg: var(--nf-orange-600);
+	--nf-orange-active-bg: var(--nf-orange-700);
+	--nf-orange-bg-subtle: hsl(var(--nf-orange-hue), var(--nf-orange-saturation), 95%);
+	--nf-orange-border-subtle: var(--nf-orange-400);
+	--nf-orange-checkbox-svg: var(--bs-checkbox-svg-light);
+	--nf-orange-dash-svg: var(--bs-dash-svg-light);
+	--nf-orange-radio-svg: var(--bs-radio-svg-light);
+	--nf-orange-switch-svg: var(--bs-switch-svg-light);
 
 	/* Primary */
 
-	--bs-primary-hue: var(--sp-turquoise-hue);
-	--bs-primary-saturation: var(--sp-turquoise-saturation);
-	--bs-primary-100-hsl: var(--sp-turquoise-100-hsl);
-	--bs-primary-200-hsl: var(--sp-turquoise-200-hsl);
-	--bs-primary-300-hsl: var(--sp-turquoise-300-hsl);
-	--bs-primary-400-hsl: var(--sp-turquoise-400-hsl);
-	--bs-primary-500-hsl: var(--sp-turquoise-500-hsl);
-	--bs-primary-600-hsl: var(--sp-turquoise-600-hsl);
-	--bs-primary-700-hsl: var(--sp-turquoise-700-hsl);
-	--bs-primary-800-hsl: var(--sp-turquoise-800-hsl);
-	--bs-primary-900-hsl: var(--sp-turquoise-900-hsl);
-	--bs-primary-100: var(--sp-turquoise-100);
-	--bs-primary-200: var(--sp-turquoise-200);
-	--bs-primary-300: var(--sp-turquoise-300);
-	--bs-primary-400: var(--sp-turquoise-400);
-	--bs-primary-500: var(--sp-turquoise-500);
-	--bs-primary-600: var(--sp-turquoise-600);
-	--bs-primary-700: var(--sp-turquoise-700);
-	--bs-primary-800: var(--sp-turquoise-800);
-	--bs-primary-900: var(--sp-turquoise-900);
-	--bs-primary-hsl: var(--sp-turquoise-hsl);
-	--bs-primary: var(--sp-turquoise);
-	--bs-primary-foreground-hsl: var(--sp-turquoise-foreground-hsl);
-	--bs-primary-foreground: var(--sp-turquoise-foreground);
-	--bs-primary-text-emphasis-hsl: var(--sp-turquoise-text-emphasis-hsl);
-	--bs-primary-text-emphasis: var(--sp-turquoise-text-emphasis);
-	--bs-primary-hover-bg: var(--sp-turquoise-hover-bg);
-	--bs-primary-active-bg: var(--sp-turquoise-active-bg);
-	--bs-primary-bg-subtle: var(--sp-turquoise-bg-subtle);
-	--bs-primary-border-subtle: var(--sp-turquoise-border-subtle);
-	--bs-primary-checkbox-svg: var(--sp-turquoise-checkbox-svg);
-	--bs-primary-dash-svg: var(--sp-turquoise-dash-svg);
-	--bs-primary-radio-svg: var(--sp-turquoise-radio-svg);
-	--bs-primary-switch-svg: var(--sp-turquoise-switch-svg);
+	--bs-primary-hue: var(--nf-purple-hue);
+	--bs-primary-saturation: var(--nf-purple-saturation);
+	--bs-primary-100-hsl: var(--nf-purple-100-hsl);
+	--bs-primary-200-hsl: var(--nf-purple-200-hsl);
+	--bs-primary-300-hsl: var(--nf-purple-300-hsl);
+	--bs-primary-400-hsl: var(--nf-purple-400-hsl);
+	--bs-primary-500-hsl: var(--nf-purple-500-hsl);
+	--bs-primary-600-hsl: var(--nf-purple-600-hsl);
+	--bs-primary-700-hsl: var(--nf-purple-700-hsl);
+	--bs-primary-800-hsl: var(--nf-purple-800-hsl);
+	--bs-primary-900-hsl: var(--nf-purple-900-hsl);
+	--bs-primary-100: var(--nf-purple-100);
+	--bs-primary-200: var(--nf-purple-200);
+	--bs-primary-300: var(--nf-purple-300);
+	--bs-primary-400: var(--nf-purple-400);
+	--bs-primary-500: var(--nf-purple-500);
+	--bs-primary-600: var(--nf-purple-600);
+	--bs-primary-700: var(--nf-purple-700);
+	--bs-primary-800: var(--nf-purple-800);
+	--bs-primary-900: var(--nf-purple-900);
+	--bs-primary-hsl: var(--nf-purple-hsl);
+	--bs-primary: var(--nf-purple);
+	--bs-primary-foreground-hsl: var(--nf-purple-foreground-hsl);
+	--bs-primary-foreground: var(--nf-purple-foreground);
+	--bs-primary-text-emphasis-hsl: var(--nf-purple-text-emphasis-hsl);
+	--bs-primary-text-emphasis: var(--nf-purple-text-emphasis);
+	--bs-primary-hover-bg: var(--nf-purple-hover-bg);
+	--bs-primary-active-bg: var(--nf-purple-active-bg);
+	--bs-primary-bg-subtle: var(--nf-purple-bg-subtle);
+	--bs-primary-border-subtle: var(--nf-purple-border-subtle);
+	--bs-primary-checkbox-svg: var(--nf-purple-checkbox-svg);
+	--bs-primary-dash-svg: var(--nf-purple-dash-svg);
+	--bs-primary-radio-svg: var(--nf-purple-radio-svg);
+	--bs-primary-switch-svg: var(--nf-purple-switch-svg);
 
 	/* Info */
 
@@ -156,63 +156,63 @@
 
 	/* Warning */
 
-	--bs-warning-hue: var(--sp-orange-hue);
-	--bs-warning-saturation: var(--sp-orange-saturation);
-	--bs-warning-100-hsl: var(--sp-orange-100-hsl);
-	--bs-warning-200-hsl: var(--sp-orange-200-hsl);
-	--bs-warning-300-hsl: var(--sp-orange-300-hsl);
-	--bs-warning-400-hsl: var(--sp-orange-400-hsl);
-	--bs-warning-500-hsl: var(--sp-orange-500-hsl);
-	--bs-warning-600-hsl: var(--sp-orange-600-hsl);
-	--bs-warning-700-hsl: var(--sp-orange-700-hsl);
-	--bs-warning-800-hsl: var(--sp-orange-800-hsl);
-	--bs-warning-900-hsl: var(--sp-orange-900-hsl);
-	--bs-warning-100: var(--sp-orange-100);
-	--bs-warning-200: var(--sp-orange-200);
-	--bs-warning-300: var(--sp-orange-300);
-	--bs-warning-400: var(--sp-orange-400);
-	--bs-warning-500: var(--sp-orange-500);
-	--bs-warning-600: var(--sp-orange-600);
-	--bs-warning-700: var(--sp-orange-700);
-	--bs-warning-800: var(--sp-orange-800);
-	--bs-warning-900: var(--sp-orange-900);
-	--bs-warning-hsl: var(--sp-orange-hsl);
-	--bs-warning: var(--sp-orange);
-	--bs-warning-foreground-hsl: var(--sp-orange-foreground-hsl);
-	--bs-warning-foreground: var(--sp-orange-foreground);
-	--bs-warning-text-emphasis-hsl: var(--sp-orange-text-emphasis-hsl);
-	--bs-warning-text-emphasis: var(--sp-orange-text-emphasis);
-	--bs-warning-hover-bg: var(--sp-orange-hover-bg);
-	--bs-warning-active-bg: var(--sp-orange-active-bg);
-	--bs-warning-bg-subtle: var(--sp-orange-bg-subtle);
-	--bs-warning-border-subtle: var(--sp-orange-border-subtle);
-	--bs-warning-checkbox-svg: var(--sp-orange-checkbox-svg);
-	--bs-warning-dash-svg: var(--sp-orange-dash-svg);
-	--bs-warning-radio-svg: var(--sp-orange-radio-svg);
-	--bs-warning-switch-svg: var(--sp-orange-switch-svg);
+	--bs-warning-hue: var(--nf-orange-hue);
+	--bs-warning-saturation: var(--nf-orange-saturation);
+	--bs-warning-100-hsl: var(--nf-orange-100-hsl);
+	--bs-warning-200-hsl: var(--nf-orange-200-hsl);
+	--bs-warning-300-hsl: var(--nf-orange-300-hsl);
+	--bs-warning-400-hsl: var(--nf-orange-400-hsl);
+	--bs-warning-500-hsl: var(--nf-orange-500-hsl);
+	--bs-warning-600-hsl: var(--nf-orange-600-hsl);
+	--bs-warning-700-hsl: var(--nf-orange-700-hsl);
+	--bs-warning-800-hsl: var(--nf-orange-800-hsl);
+	--bs-warning-900-hsl: var(--nf-orange-900-hsl);
+	--bs-warning-100: var(--nf-orange-100);
+	--bs-warning-200: var(--nf-orange-200);
+	--bs-warning-300: var(--nf-orange-300);
+	--bs-warning-400: var(--nf-orange-400);
+	--bs-warning-500: var(--nf-orange-500);
+	--bs-warning-600: var(--nf-orange-600);
+	--bs-warning-700: var(--nf-orange-700);
+	--bs-warning-800: var(--nf-orange-800);
+	--bs-warning-900: var(--nf-orange-900);
+	--bs-warning-hsl: var(--nf-orange-hsl);
+	--bs-warning: var(--nf-orange);
+	--bs-warning-foreground-hsl: var(--nf-orange-foreground-hsl);
+	--bs-warning-foreground: var(--nf-orange-foreground);
+	--bs-warning-text-emphasis-hsl: var(--nf-orange-text-emphasis-hsl);
+	--bs-warning-text-emphasis: var(--nf-orange-text-emphasis);
+	--bs-warning-hover-bg: var(--nf-orange-hover-bg);
+	--bs-warning-active-bg: var(--nf-orange-active-bg);
+	--bs-warning-bg-subtle: var(--nf-orange-bg-subtle);
+	--bs-warning-border-subtle: var(--nf-orange-border-subtle);
+	--bs-warning-checkbox-svg: var(--nf-orange-checkbox-svg);
+	--bs-warning-dash-svg: var(--nf-orange-dash-svg);
+	--bs-warning-radio-svg: var(--nf-orange-radio-svg);
+	--bs-warning-switch-svg: var(--nf-orange-switch-svg);
 }
 
 [data-bs-theme=dark] {
-	/* SocialPass turquoise */
+	/* SocialPass purple */
 
-	--sp-turquoise-text-emphasis-hsl: var(--sp-turquoise-400-hsl);
-	--sp-turquoise-text-emphasis: hsl(var(--sp-turquoise-text-emphasis-hsl));
-	--sp-turquoise-bg-subtle: hsl(var(--sp-turquoise-hue), calc(var(--sp-turquoise-saturation)/3), 15%);
-	--sp-turquoise-border-subtle: var(--sp-turquoise-600);
+	--nf-purple-text-emphasis-hsl: var(--nf-purple-400-hsl);
+	--nf-purple-text-emphasis: hsl(var(--nf-purple-text-emphasis-hsl));
+	--nf-purple-bg-subtle: hsl(var(--nf-purple-hue), calc(var(--nf-purple-saturation)/3), 15%);
+	--nf-purple-border-subtle: var(--nf-purple-600);
 
 	/* SocialPass orange */
 
-	--sp-orange-text-emphasis-hsl: var(--sp-orange-400-hsl);
-	--sp-orange-text-emphasis: hsl(var(--sp-orange-text-emphasis-hsl));
-	--sp-orange-bg-subtle: hsl(var(--sp-orange-hue), calc(var(--sp-orange-saturation)/3), 15%);
-	--sp-orange-border-subtle: var(--sp-orange-600);
+	--nf-orange-text-emphasis-hsl: var(--nf-orange-400-hsl);
+	--nf-orange-text-emphasis: hsl(var(--nf-orange-text-emphasis-hsl));
+	--nf-orange-bg-subtle: hsl(var(--nf-orange-hue), calc(var(--nf-orange-saturation)/3), 15%);
+	--nf-orange-border-subtle: var(--nf-orange-600);
 
 	/* Primary */
 
-	--bs-primary-text-emphasis-hsl: var(--sp-turquoise-text-emphasis-hsl);
-	--bs-primary-text-emphasis: var(--sp-turquoise-text-emphasis);
-	--bs-primary-bg-subtle: var(--sp-turquoise-bg-subtle);
-	--bs-primary-border-subtle: var(--sp-turquoise-border-subtle);
+	--bs-primary-text-emphasis-hsl: var(--nf-purple-text-emphasis-hsl);
+	--bs-primary-text-emphasis: var(--nf-purple-text-emphasis);
+	--bs-primary-bg-subtle: var(--nf-purple-bg-subtle);
+	--bs-primary-border-subtle: var(--nf-purple-border-subtle);
 
 	/* Info */
 
@@ -223,10 +223,10 @@
 
 	/* Warning */
 
-	--bs-warning-text-emphasis-hsl: var(--sp-orange-text-emphasis-hsl);
-	--bs-warning-text-emphasis: var(--sp-orange-text-emphasis);
-	--bs-warning-bg-subtle: var(--sp-orange-bg-subtle);
-	--bs-warning-border-subtle: var(--sp-orange-border-subtle);
+	--bs-warning-text-emphasis-hsl: var(--nf-orange-text-emphasis-hsl);
+	--bs-warning-text-emphasis: var(--nf-orange-text-emphasis);
+	--bs-warning-bg-subtle: var(--nf-orange-bg-subtle);
+	--bs-warning-border-subtle: var(--nf-orange-border-subtle);
 }
 
 /**
@@ -237,13 +237,13 @@
 
 @font-face {
 	font-family: "Urbane";
-	src: url("Urbane-Medium.otf");
+	src: url("/theme/fonts/Urbane-Medium");
 	font-weight: normal;
 }
 
 @font-face {
 	font-family: "Urbane";
-	src: url("UrbaneBold.otf");
+	src: url("/theme/fonts/Urbane-Bold");
 	font-weight: bold;
 }
 
