--- a/dapp-v1/public/theme/nftyfinance-theme.css
+++ b/dapp-v1/public/theme/nftyfinance-theme.css
@@ -367,3 +367,13 @@
 .dropdown-menu {
 	border: 0;
 }
+
+
+/**
+ * ----------------------------------------------------------------------------
+ * [ Shadow ]
+ * ----------------------------------------------------------------------------
+ */
+ .shadow {
+	 box-shadow: 0px 4px 14px 0px rgba(129, 71, 229, 0.20) !important;
+ }
