Replace empty state image, better active sidebar link

--- a/dapp-v1/public/theme/magnify-theme.css
+++ b/dapp-v1/public/theme/magnify-theme.css
@@ -189,6 +189,16 @@
 
 /**
  * ----------------------------------------------------------------------------
+ * [ Sidebar ]
+ * ----------------------------------------------------------------------------
+ */
+
+.content-wrapper {
+    background: radial-gradient(60% 30% at top center, hsla(var(--bs-primary-500-hsl), 0.25), var(--bs-body-bg));
+}
+
+/**
+ * ----------------------------------------------------------------------------
  * [ Buttons ]
  * ----------------------------------------------------------------------------
  */
