deploy: 1bb5cb9d76cf2779cc58a0e364d750b4adfc5145

--- a/css/variables.css
+++ b/css/variables.css
@@ -21,7 +21,7 @@
     --sidebar-bg: #14191f;
     --sidebar-fg: #c8c9db;
     --sidebar-non-existant: #5c6773;
-    --sidebar-active: #ffb454;
+    --sidebar-active: #7AFFF8;
     --sidebar-spacer: #2d334f;
 
     --scrollbar: var(--sidebar-fg);
@@ -29,7 +29,7 @@
     --icons: #737480;
     --icons-hover: #b7b9cc;
 
-    --links: #0096cf;
+    --links: #7AFFF8;
 
     --inline-code-color: #ffb454;
 
@@ -65,7 +65,7 @@
     --sidebar-bg: #292c2f;
     --sidebar-fg: #a1adb8;
     --sidebar-non-existant: #505254;
-    --sidebar-active: #3473ad;
+    --sidebar-active: #7AFFF8;
     --sidebar-spacer: #393939;
 
     --scrollbar: var(--sidebar-fg);
@@ -73,7 +73,7 @@
     --icons: #43484d;
     --icons-hover: #b3c0cc;
 
-    --links: #2b79a2;
+    --links: #7AFFF8;
 
     --inline-code-color: #c5c8c6;
 
@@ -109,7 +109,7 @@
     --sidebar-bg: #fafafa;
     --sidebar-fg: hsl(0, 0%, 0%);
     --sidebar-non-existant: #aaaaaa;
-    --sidebar-active: #1f1fff;
+    --sidebar-active: #006661;
     --sidebar-spacer: #f4f4f4;
 
     --scrollbar: #8F8F8F;
@@ -117,7 +117,7 @@
     --icons: #747474;
     --icons-hover: #000000;
 
-    --links: #20609f;
+    --links: #006661;
 
     --inline-code-color: #301900;
 
@@ -153,7 +153,7 @@
     --sidebar-bg: #282d3f;
     --sidebar-fg: #c8c9db;
     --sidebar-non-existant: #505274;
-    --sidebar-active: #2b79a2;
+    --sidebar-active: #7AFFF8;
     --sidebar-spacer: #2d334f;
 
     --scrollbar: var(--sidebar-fg);
@@ -161,7 +161,7 @@
     --icons: #737480;
     --icons-hover: #b7b9cc;
 
-    --links: #2b79a2;
+    --links: #7AFFF8;
 
     --inline-code-color: #c5c8c6;
 
@@ -197,7 +197,7 @@
     --sidebar-bg: #3b2e2a;
     --sidebar-fg: #c8c9db;
     --sidebar-non-existant: #505254;
-    --sidebar-active: #e69f67;
+    --sidebar-active: #7AFFF8;
     --sidebar-spacer: #45373a;
 
     --scrollbar: var(--sidebar-fg);
@@ -205,7 +205,7 @@
     --icons: #737480;
     --icons-hover: #262625;
 
-    --links: #2b79a2;
+    --links: #006661;
 
     --inline-code-color: #6e6b5e;
 
