--- a/css/general.css
+++ b/css/general.css
@@ -6,12 +6,26 @@
     color-scheme: var(--color-scheme);
 }
 
+@font-face {
+    font-family: "Urbane";
+    src: url("../fonts/Urbane-Medium.ttf");
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: "Urbane";
+    src: url("../fonts/Urbane-Medium.ttf");
+    font-weight: bold;
+}
+
 html {
-    font-family: "Open Sans", sans-serif;
+    font-family: "Urbane", sans-serif;
     color: var(--fg);
     background-color: var(--bg);
     text-size-adjust: none;
     -webkit-text-size-adjust: none;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 body {
