--- a/theme/css/general.css
+++ b/theme/css/general.css
@@ -6,6 +6,18 @@
     color-scheme: var(--color-scheme);
 }
 
+@font-face {
+    font-family: "Urbane";
+    src: url("../../fonts/Urbane-Medium.ttf");
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: "Urbane";
+    src: url("../../fonts/Urbane-Medium.ttf");
+    font-weight: bold;
+}
+
 html {
     font-family: "Urbane", sans-serif;
     color: var(--fg);
