--- a/theme/css/general.css
+++ b/theme/css/general.css
@@ -8,13 +8,13 @@
 
 @font-face {
     font-family: "Urbane";
-    src: url("../../../fonts/Urbane-Medium.ttf");
+    src: url("Urbane-Medium.ttf");
     font-weight: normal;
 }
 
 @font-face {
     font-family: "Urbane";
-    src: url("../../../fonts/Urbane-Medium.ttf");
+    src: url("Urbane-Medium.ttf");
     font-weight: bold;
 }
 
