--- a/book.css
+++ b/book.css
@@ -7,7 +7,19 @@ table {
 table td:first-child {
     width: 15%;
 }
-  
+
 table td:nth-child(2) {
     width: 25%;
+}
+
+@font-face {
+    font-family: "Urbane";
+    src: url("../fonts/Urbane-Medium.ttf");
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: "Urbane";
+    src: url("../fonts/Urbane-Medium.ttf");
+    font-weight: bold;
 }
